Update Automating Data Retrieval from the Web with Selenium.ipynb

--- a/Projects/Pb5_Rainfall data analysis of TN/Automate Web Scrab/Automating Data Retrieval from the Web with Selenium.ipynb
+++ b/Projects/Pb5_Rainfall data analysis of TN/Automate Web Scrab/Automating Data Retrieval from the Web with Selenium.ipynb
@@ -20,204 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "31a37f30-412a-44bc-8f30-2b62f322849f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the Start & End Date as format dd-mm-yy\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'selenium'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m timedelta\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mselenium\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mselenium\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mwebdriver\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mkeys\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Keys\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mselenium\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mwebdriver\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mby\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m By\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'selenium'"
      ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'> 01-01-2025\n",
-      "<class 'str'> 13-01-2025\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = C\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:153: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  Search_Rain_Fall_Data = pd.concat([Search_Rain_Fall_Data,df3])\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = C\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = C\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = C\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dept</th>\n",
-       "      <th>dist</th>\n",
-       "      <th>station</th>\n",
-       "      <th>value</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Kanniyakumari</td>\n",
-       "      <td>Suralacode</td>\n",
-       "      <td>31.4</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Kanniyakumari</td>\n",
-       "      <td>Aralvaimozhi</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Nagapattinam</td>\n",
-       "      <td>Vedaranyam</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Nagapattinam</td>\n",
-       "      <td>Kodiayakarai</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Ramanathapuram</td>\n",
-       "      <td>Thangachimadam</td>\n",
-       "      <td>24.4</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Tiruvallur</td>\n",
-       "      <td>Thamaraipakkam</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2025-01-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Tiruvallur</td>\n",
-       "      <td>Tiruvallur</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2025-01-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Villupuram</td>\n",
-       "      <td>RSCL-2 Koliyanur</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2025-01-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Villupuram</td>\n",
-       "      <td>RSCL-2 Valavanur</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2025-01-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Villupuram</td>\n",
-       "      <td>Marakkanam</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2025-01-13</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>228 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        dept            dist           station  value       date\n",
-       "id                                                              \n",
-       "0    Revenue   Kanniyakumari        Suralacode   31.4 2025-01-01\n",
-       "1    Revenue   Kanniyakumari      Aralvaimozhi    2.0 2025-01-01\n",
-       "2    Revenue    Nagapattinam        Vedaranyam    3.8 2025-01-01\n",
-       "3    Revenue    Nagapattinam      Kodiayakarai    2.6 2025-01-01\n",
-       "4    Revenue  Ramanathapuram    Thangachimadam   24.4 2025-01-01\n",
-       "..       ...             ...               ...    ...        ...\n",
-       "223  Revenue      Tiruvallur    Thamaraipakkam    3.0 2025-01-13\n",
-       "224  Revenue      Tiruvallur        Tiruvallur    3.0 2025-01-13\n",
-       "225  Revenue      Villupuram  RSCL-2 Koliyanur    3.0 2025-01-13\n",
-       "226  Revenue      Villupuram  RSCL-2 Valavanur    3.0 2025-01-13\n",
-       "227  Revenue      Villupuram        Marakkanam    3.0 2025-01-13\n",
-       "\n",
-       "[228 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -633,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
